--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,10 @@ repositories {
 }
 
 dependencies {
-//	TODO: Implement when we begin doing the DB part
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
+	compile "org.postgresql:postgresql:42.2.5"
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
