--- a/build.gradle
+++ b/build.gradle
@@ -27,4 +27,5 @@ dependencies {
 	compile "org.postgresql:postgresql:42.2.5"
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	runtime 'com.h2database:h2:1.4.194'
 }
